# nyasRT

./: .gitignore  CMakeLists.txt  README.md  RGFW_IMPLEMENTATION.cpp  example.qoi  main.cpp  nyasRT.sln  out_16.qoi  scences.hpp
nyasRT/: aaa.h  nyasRT.cpp  nyasRT.h  nyasRT.vcxproj  nyasRT.vcxproj.filters  objects.cpp  objects.h  samples.cpp  samples.h  setup.h  utils.cpp  utils.h  worlds.cpp  worlds.h
src/: Figure.hpp  Interpolation.hpp  Object3D.hpp  PCG.hpp  RGB.hpp  RGFW_bridge.hpp  Renderer.hpp  Sampler.hpp  Scence.hpp  common.hpp  main.cpp  nyasRT.hpp  post_process.hpp  random.hpp  scences.hpp  utils.hpp
src/BRDFs/: BRDF.hpp  Disney.hpp  SimpleSpecular.hpp  SimplyWrongSpecular.hpp
src/cameras/: Camera.hpp  PerspectiveCamera.hpp
src/components/: Object3D.hpp
src/components/BRDFs/: BRDF.hpp  Disney.hpp  SimplyWrongSpecular.hpp
src/components/cameras/: Camera.hpp  PerspectiveCamera.hpp
src/components/light_sources/: LightSource.hpp  SunLight.hpp
src/components/materials/: FunctionalMaterial.hpp  Material.hpp  PureColor.hpp  Texture.hpp
src/components/sky_models/: GradientSky.hpp  Hosek.hpp  Sky.hpp
src/geometry/: BoundingBox.hpp  Mesh.hpp  Ray.hpp  Transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/graphics/: DisplayWindow.hpp  GraphicsBuffer.hpp  Interpolation.hpp  post_process.hpp
src/light_sources/: LightSource.hpp  SunLight.hpp
src/materials/: FunctionalMaterial.hpp  Material.hpp  PureColor.hpp  Texture.hpp
src/sky_models/: ArHosek.hpp  GradientSky.hpp  Hosek.hpp  Sky.hpp
src/textures/: FunctionalTexture.hpp  PureColor.hpp  Texture.hpp
(+2 files in other folders)
